--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -7,30 +7,28 @@ WORKDIR /app
 COPY package*.json ./
 
 # Install dependencies
-RUN npm ci && npm cache clean --force
+RUN npm ci
 
 # Copy source code
 COPY . .
 
 # Build the application with env var
-ARG VITE_API_BASE_URL=http://localhost:3001/api
+ARG VITE_API_BASE_URL=http://localhost:3012/api
 ENV VITE_API_BASE_URL=$VITE_API_BASE_URL
 RUN npm run build
 
 # Production stage
-FROM nginx:alpine AS production
+FROM node:18-alpine AS production
+
+RUN npm install -g serve
+
+WORKDIR /app
 
 # Copy built assets from build stage
-COPY --from=build /app/dist /usr/share/nginx/html
-
-# Copy nginx configuration
-COPY nginx.conf /etc/nginx/nginx.conf
-
-# Remove default nginx config and use custom
-RUN rm /etc/nginx/conf.d/default.conf
+COPY --from=build /app/dist ./dist
 
 # Expose port 80
 EXPOSE 80
 
-# Start nginx
-CMD ["nginx", "-g", "daemon off;"]
+# Start serve
+CMD ["serve", "-s", "dist", "-l", "80"]
