--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,7 +6,7 @@ services:
       args:
         - VITE_API_BASE_URL=http://localhost:3012/api
     ports:
-      - "8080:80"
+      - "8128:80"
     depends_on:
       backend:
         condition: service_healthy
@@ -61,6 +61,7 @@ services:
     volumes:
       - ./backend:/app
       - /app/node_modules
-# networks:
-#   app-network:
-#     driver: bridge
+
+networks:
+  app-network:
+    driver: bridge
