--- a/backend/package.json
+++ b/backend/package.json
@@ -9,20 +9,20 @@
     "test": "jest"
   },
   "dependencies": {
-    "axios": "^1.6.2",
-    "cheerio": "^1.0.0-rc.12",
+    "axios": "^1.12.2",
+    "cheerio": "^1.1.2",
     "cors": "^2.8.5",
-    "dotenv": "^16.3.1",
-    "express": "^4.18.2",
-    "express-rate-limit": "^7.1.5",
-    "helmet": "^7.1.0",
+    "dotenv": "^17.2.2",
+    "express": "^5.1.0",
+    "express-rate-limit": "^8.1.0",
+    "helmet": "^8.1.0",
     "node-cache": "^5.1.2",
     "punycode": "^2.3.1",
     "smtp-connection": "^4.0.2",
-    "validator": "^13.11.0"
+    "validator": "^13.15.15"
   },
   "devDependencies": {
-    "jest": "^29.7.0",
+    "jest": "^30.2.0",
     "nodemon": "^3.1.10"
   },
   "engines": {
